Fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body {
 }
 .container {
   height: 25rem;
-  width: 30rem;
+  width: 95%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -96,6 +96,8 @@ body {
 }
 .container .points {
   font-size: 1.5rem;
+  width: 20rem;
+  text-align: center;
 }
 .logo-img {
   margin-top: 3rem;
